--- a/flight-simulator.html
+++ b/flight-simulator.html
@@ -49,7 +49,7 @@
     </nav>
     <main class="border border-dark">
         <div class="container p-0">
-            <div class="p-0 col-lg-10 mx-auto"><img src="./assets/flight-simulator (11).jpg" alt="1" class="img-fluid"></div>
+            <div class="p-0 col-lg-10 mx-auto"><img src="./assets/flight-simulator (10).jpg" alt="1" class="img-fluid"></div>
             <div class="p-4 p-lg-5">
                 <div class="row">
                     <div class="col-sm-7 col-md-6 col-lg-3 p-0 mx-auto"><img src="./assets/flight-simulator-x.jpg" alt="1" class="img-fluid"></div>
@@ -77,7 +77,7 @@
                         a dynamic and living world. <br> RECENT REVIEWS: Very Positive (2,237)<br> ALL REVIEWS: Mostly Positive (17,695)<br> RELEASE DATE: 18 Aug, 2020<br> DEVELOPER: Asobo Studio<br> PUBLISHER: Xbox Game Studios<br>                        From light planes to wide-body jets, fly highly detailed and accurate aircraft in the next generation of Microsoft Flight Simulator. Test your piloting skills against the challenges of night flying, real-time atmospheric simulation
                         and live weather in a dynamic and living world. Create your flight plan to anywhere on the planet. Microsoft Flight Simulator includes 20 highly detailed planes with unique flight models and 30 hand-crafted airports.
 
-                        <h5>GAEM DESCRIPTION</h5>
+                        <h5>GAME DESCRIPTION</h5>
                         The World is at your Fingertips.
                         <br>• Vivid and Detailed Landscapes – Immerse yourself in the vast and beautiful world that is our planet with over 37 thousand airports, 1.5 billion buildings, 2 trillion trees, mountains, roads, rivers and more.
                         <br>• Living World – Earth is vibrant and ever-changing and so is the world of Microsoft Flight Simulator which includes live traffic, real-time weather and animals. Earn Your Wings.
