--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Amaranth&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@700&family=Poppins:wght@300&family=Texturina:wght@900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-    
+
 <body class="container p-0">
     <nav class="navbar navbar-expand-lg navbar-dark p-0 bg-primary">
         <div class="container-fluid p-3">
@@ -22,7 +23,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-  
+
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item active">
@@ -42,9 +43,9 @@
                 <div class="custom-control custom-switch text-center m-auto">
                     <input type="checkbox" class="custom-control-input" id="customSwitch1" onclick="myFunction()">
                     <label class="custom-control-label" for="customSwitch1">Switch Mode</label>
-                </div>  
-            </div>  
-        </div>  
+                </div>
+            </div>
+        </div>
     </nav>
     <main class="container border border-dark">
         <div id="carouselExampleIndicators" class="carousel slide container" data-ride="carousel">
