--- a/outer-wilds.html
+++ b/outer-wilds.html
@@ -67,7 +67,7 @@
                             <button class="btn btn-primary btn-large align-self-center mx-auto">PURCHASE</button>
                         </div>
                         <div class="text-center p-2">
-                            <button class="btn btn-primary btn-large align-self-center mx-auto" onClick="window.print()">PRINT</button>
+                            <button class="btn btn-primary btn-large align-self-center mx-auto" onClick="window.print()">PRINT RECEIPT</button>
                         </div>
                     </div>
                 </div>
