--- a/dark-souls.html
+++ b/dark-souls.html
@@ -44,6 +44,9 @@
                     <input type="checkbox" class="custom-control-input" id="customSwitch1" onclick="myFunction()">
                     <label class="custom-control-label" for="customSwitch1">Switch Mode</label>
                 </div>
+                <div class="custom-control custom-switch text-center m-auto">
+                    <div id="google_translate_element"></div>
+                </div>
             </div>
         </div>
     </nav>
@@ -143,6 +146,7 @@
 
     <script src="./js/jquery-3.5.1.min.js "></script>
     <script src="./js/bootstrap.min.js "></script>
+    <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script src="./js/main.js "></script>
 </body>
 
