--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Amaranth&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@700&family=Poppins:wght@300&family=Texturina:wght@900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -42,6 +43,9 @@
                 <div class="custom-control custom-switch text-center m-auto">
                     <input type="checkbox" class="custom-control-input" id="customSwitch1" onclick="myFunction()">
                     <label class="custom-control-label" for="customSwitch1">Switch Mode</label>
+                </div>
+                <div class="custom-control custom-switch text-center m-auto">
+                    <div id="google_translate_element"></div>
                 </div>
             </div>
         </div>
@@ -88,7 +92,7 @@
                     <img class="img-fluid" src="./assets/slogan (1).jpg" alt="slogan">
                 </div>
                 <div class="p-3 p-lg-4 my-2" id="games">
-                    <h3 class="text-center text-uppercase my-3 heading"><i class="fas fa-puzzle-piece"></i> Our Games <i class="fas fa-puzzle-piece"></i></h3>
+                    <h3 class="text-center text-uppercase my-3 heading"><i class="fas fa-puzzle-piece"></i>Our Games<i class="fas fa-puzzle-piece"></i></h3>
                     <div class="col-lg-10 mx-auto">
                         <div class="row">
                             <div class="col-6 col-md-4 p-0 border">
@@ -112,7 +116,7 @@
                         </div>
                     </div>
                 </div>
-                <h3 class="text-center text-uppercase mt-4 heading">News</h3>
+                <h3 class="text-center text-uppercase mt-4 heading"><i class="fas fa-puzzle-piece"></i> News <i class="fas fa-puzzle-piece"></i></h3>
                 <div class="p-4">
                     <div class="row">
                         <div class="col-md-4 p-3">
@@ -232,6 +236,7 @@
 
     <script src="./js/jquery-3.5.1.min.js "></script>
     <script src="./js/bootstrap.min.js "></script>
+    <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script src="./js/main.js "></script>
 </body>
 
